# Chainscripts

./: .coverage  .pre-commit-config.yaml  README.md  adaptive_performance_test.py  cleaned_data.csv  debug_categorization.py  example_workflow.txt  final_output.csv  mypy.ini  pyproject.toml  quantum_benchmarks.csv  requirements.txt  requirements_basic.txt  test_adaptive_profiling.py  test_data.csv  threshold_optimizer.py
.github/workflows/: benchmark.yml  typecheck.yml
api/: health.py
benchmark_results/: benchmark_report.json  benchmark_results.csv
benchmarks/: performance_benchmark.py
chainscript/: __init__.py  api.py  backends.py  error.py  marketplace.py  qml.py  security.py  testing.py  topological.py
chainscript/core/: __init__.py
cli/: chainscript_cli.py
config/: secrets.py  settings.py
core/: __init__.py  auto_classifier.py  bytecode_optimizer.py  cache_manager.py  nano_engine.py  self_healing_executor.py
experimental/: quantum.py
golden_scripts/: README.md
monitoring/: alerts.yml  metrics.py
nano_scripts/: complex_medium_script.py  complex_transform.py  large_processing_script.py  tiny_helper.py
nano_scripts/api/: fetch_data.py
nano_scripts/data/: clean_csv.py
security/: audit.py  sandbox.py
tests/: benchmark.py  conftest.py  test_adaptive_profiling.py  test_all_modules.py  test_docs.py  test_performance.py
tests/security/: test_audit.py  test_crypto.py  test_sandbox.py
utils/: logging.py  tracing.py
