[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chainscript"
version = "1.0.0"
description = "Next-gen script orchestration engine"
dependencies = [
    "watchdog>=3.0.0",
    "sentry-sdk>=1.40.0",
    "numba>=0.58.0"
]

[project.optional-dependencies]
dev = ["mypy", "pytest", "black"]