[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chainscript"
version = "1.0.0"
description = "Next-gen script orchestration engine"
dependencies = [
    "watchdog>=3.0.0",
    "sentry-sdk>=1.40.0,<2.0.0",
    "pyquil>=3.0.0,<4.0.0",
    "numba>=0.58.0"
]

[project.optional-dependencies]
dev = ["mypy", "pytest", "black"]

[tool.setuptools.packages]
packages = [
    { include = "chainscript" },
    { include = "api" },
    { include = "config" },
    { include = "core" },
    { include = "monitoring" },
    { include = "security" },
    { include = "utils" },
    { include = "experimental" },
]
# filepath: h:\PhantomGhost\Storage\Media\Media\Projects\MyProjects\chainscript\pyproject.toml
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''